--- a/fashe-colorlib/order-detail.html
+++ b/fashe-colorlib/order-detail.html
@@ -95,7 +95,7 @@
 							</table>
 						</div>
 						<div class="card-footer text-center">
-							<a href="order-support.php" class="btn btn-outline-dark">Get Support</a>
+							<a href="order-support.php" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Get Support</a>
 						</div>
 					</div>
 				</div>
