--- a/fashe-colorlib/orders.html
+++ b/fashe-colorlib/orders.html
@@ -65,7 +65,7 @@
 						<h6 class="card-text">Dispatched to: {$order[3]}</h6>
 						<h6 class="card-text">Status: {$order[2]}</h6>
 						<div class="text-center">
-							<a href="" onclick="openDetails({$order[0]})" class="btn btn-outline-dark">Details</a>
+							<button href="" onclick="openDetails({$order[0]})" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Details</button>
 						</div>
 					</div>
 				</div>
