--- a/fashe-colorlib/shop.html
+++ b/fashe-colorlib/shop.html
@@ -177,9 +177,15 @@
 				<nav aria-label="Page navigation example">
 					<ul class="pagination">
 						<li class="page-item"><a class="page-link" href="shop.php?page=1">First</a></li>
-						{for $i=$page to $last max=5}  
+						{if $page > 1}
+						{for $i=$page to $last max=5}
+						<li class="page-item"><a class="page-link" href="shop.php?page={$i-1}">{$i-1}</a></li>
+						{/for}
+						{else}
+						{for $i=$page to $last max=5}
 						<li class="page-item"><a class="page-link" href="shop.php?page={$i}">{$i}</a></li>
 						{/for}
+						{/if}
 						<li class="page-item"><a class="page-link" href="shop.php?page={$last}">Last</a></li>
 					</ul>
 				</nav>
