Fix smarty indentation

--- a/fashe-colorlib/shop-empty.html
+++ b/fashe-colorlib/shop-empty.html
@@ -93,8 +93,8 @@
                     </div>
 
                     <span class="s-text8 p-t-5 p-b-5">
-							Showing {$prd} of {$total_prd} results
-						</span>
+						Showing 0 of 0 results
+					</span>
                 </div>
 
                 <!-- Product -->
