--- a/fashe-colorlib/payments.html
+++ b/fashe-colorlib/payments.html
@@ -68,7 +68,7 @@
 							<p class="card-text">{$payment[3]}</p>
 							<p class="card-text">{$payment[4]}</p>
 							<div class="text-center">
-								<button href="" onclick="delet({$payment[0]})" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Delete</button>
+								<button href="" onclick="delet('{$payment[0]}')" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Delete</button>
 							</div>
 						</div>
 					</div>
