--- a/fashe-colorlib/orders-empty.html
+++ b/fashe-colorlib/orders-empty.html
@@ -51,6 +51,25 @@
 							</a>
 						</li>
 					</ul>
+
+					{if $admin == 1}
+						<h4 class="m-text14 p-b-7">
+							Admin
+						</h4>
+						<ul>
+							<li class="p-t-4">
+								<a href="add-product.php" class="s-text13">
+									Add product
+								</a>
+							</li>
+
+							<li class="p-t-4">
+								<a href="edit-window.php" class="s-text13">
+									Manage window products
+								</a>
+							</li>
+						</ul>
+					{/if}
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-8 col-lg-9 p-b-50">
