--- a/fashe-colorlib/add-payment.html
+++ b/fashe-colorlib/add-payment.html
@@ -52,6 +52,25 @@
 							</a>
 						</li>
 					</ul>
+
+					{if $admin == 1}
+						<h4 class="m-text14 p-b-7">
+							Admin
+						</h4>
+						<ul>
+							<li class="p-t-4">
+								<a href="add-product.php" class="s-text13">
+									Add product
+								</a>
+							</li>
+
+							<li class="p-t-4">
+								<a href="edit-window.php" class="s-text13">
+									Manage window products
+								</a>
+							</li>
+						</ul>
+					{/if}
 				</div>
 			</div>
 			<div class="col-6">
@@ -67,7 +86,7 @@
 					{/if}
 					
 					<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Name" required>
+						<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Name" required>
 					</div>
 
 					<div class="bo4 of-hidden size15 m-b-20">
