--- a/fashe-colorlib/orders.html
+++ b/fashe-colorlib/orders.html
@@ -51,6 +51,25 @@
 							</a>
 						</li>
 					</ul>
+
+					{if $admin == 1}
+						<h4 class="m-text14 p-b-7">
+							Admin
+						</h4>
+						<ul>
+							<li class="p-t-4">
+								<a href="add-product.php" class="s-text13">
+									Add product
+								</a>
+							</li>
+
+							<li class="p-t-4">
+								<a href="edit-window.php" class="s-text13">
+									Manage window products
+								</a>
+							</li>
+						</ul>
+					{/if}
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-8 col-lg-9 p-b-50">
@@ -65,7 +84,7 @@
 							<h6 class="card-text">Dispatched to: {$order[3]}</h6>
 							<h6 class="card-text">Status: {$order[2]}</h6>
 							<div class="text-center">
-								<button href="" onclick="openDetails({$order[0]})" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Details</button>
+								<button href="" onclick="openDetails('{$order[0]}')" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Details</button>
 							</div>
 						</div>
 					</div>
