--- a/fashe-colorlib/orders-empty.html
+++ b/fashe-colorlib/orders-empty.html
@@ -74,7 +74,7 @@
 			</div>
 			<div class="col-sm-6 col-md-8 col-lg-9 p-b-50">
                 <div class="m-text5 t-center">
-                    <h2>You've no order yet</h2>
+                    <h2>You haven't placed any orders yet</h2>
                 </div>
 			</div>
 		</div>
