Add discout product form

--- a/fashe-colorlib/add-product.html
+++ b/fashe-colorlib/add-product.html
@@ -101,7 +101,7 @@
 					</div>
 
 					<div class="bo4 of-hidden size15 m-b-20">
-						<input class="sizefull s-text7 p-l-22 p-r-22" type="number" name="price" placeholder="Price" step="0.01" required>
+						<input class="sizefull s-text7 p-l-22 p-r-22" type="number" name="price" min="0" placeholder="Price" step="0.01" required>
 					</div>
 
 					<div class="bo4 of-hidden size15 m-b-20">
