--- a/fashe-colorlib/html/orders-empty.html
+++ b/fashe-colorlib/html/orders-empty.html
@@ -14,64 +14,9 @@
 <section class="bgwhite p-t-55 p-b-65">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-6 col-md-4 col-lg-3 p-b-50">
-				<div class="leftbar p-r-20 p-r-0-sm">
-					<h4 class="m-text14 p-b-7">
-						Menu
-					</h4>
-	
-					<ul class="p-b-54">
-						<li class="p-t-4">
-							<a href="user-panel.php" class="s-text13 active1">
-								Profile
-							</a>
-						</li>
-	
-						<li class="p-t-4">
-							<a href="addresses.php" class="s-text13">
-								Adresses
-							</a>
-						</li>
-	
-						<li class="p-t-4">
-							<a href="payments.php" class="s-text13">
-								Payment methods
-							</a>
-						</li>
-	
-						<li class="p-t-4">
-							<a href="orders.php" class="s-text13">
-								Orders
-							</a>
-						</li>
-	
-						<li class="p-t-4">
-							<a href="logout.php" class="s-text13">
-								Logout
-							</a>
-						</li>
-					</ul>
+			
+			{include file="html/left-panel.html" title="Menu"}
 
-					{if $admin == 1}
-						<h4 class="m-text14 p-b-7">
-							Admin
-						</h4>
-						<ul>
-							<li class="p-t-4">
-								<a href="add-product.php" class="s-text13">
-									Add product
-								</a>
-							</li>
-
-							<li class="p-t-4">
-								<a href="edit-window.php" class="s-text13">
-									Manage window products
-								</a>
-							</li>
-						</ul>
-					{/if}
-				</div>
-			</div>
 			<div class="col-sm-6 col-md-8 col-lg-9 p-b-50">
                 <div class="m-text5 t-center">
                     <h2>You haven't placed any orders yet</h2>
