--- a/fashe-colorlib/html/shop.html
+++ b/fashe-colorlib/html/shop.html
@@ -98,7 +98,7 @@
 									<option value = "200,200000">€200.00+</option>
 								</select>
 						</div>
-                        <div class="rs2-select2 bo4 of-hidden w-size12 m-t-5 m-b-5 m-r-10">
+                        <div class="rs2-select2 of-hidden w-size12 m-t-5 m-b-5 m-r-10">
                             <button class="flex-c-m size2 bg4 bo-rad-23 hov1 m-text3 trans-0-4" onclick="change()">Update Sorting</button>
 						</div>
 					</div>
