--- a/fashe-colorlib/html/shop.html
+++ b/fashe-colorlib/html/shop.html
@@ -25,7 +25,7 @@
 					<ul class="p-b-54">
 						<li class="p-t-4">
 							{if $option == ""}
-								<a href="shop.php" class="s-text13 active1">
+								<a id="active" href="shop.php" class="s-text13 active1">
 									All
 								</a>
 							{else}
@@ -37,7 +37,7 @@
 
 						<li class="p-t-4">
 							{if $option == "onsale"}
-								<a href="shop.php?onsale=onsale" class="s-text13 active1">
+								<a id="active" href="shop.php?onsale=onsale" class="s-text13 active1">
 									On Sale
 								</a>
 							{else}
@@ -49,7 +49,7 @@
 
 						<li class="p-t-4">
 							{if $option == "swords"}
-								<a href="shop.php?catalogue=swords" class="s-text13 active1">
+								<a id="active" href="shop.php?catalogue=swords" class="s-text13 active1">
 									Swords
 								</a>
 							{else}
@@ -61,7 +61,7 @@
 
 						<li class="p-t-4">
 							{if $option == "shields"}
-								<a href="shop.php?catalogue=shields" class="s-text13 active1">
+								<a id="active" href="shop.php?catalogue=shields" class="s-text13 active1">
 									Shields
 								</a>
 							{else}
@@ -85,7 +85,7 @@
 
 						<li class="p-t-4">
 							{if $option == "manuscripts"}
-								<a href="shop.php?catalogue=manuscripts" class="s-text13 active1">
+								<a id="active" href="shop.php?catalogue=manuscripts" class="s-text13 active1">
 									Manuscripts
 								</a>
 							{else}
@@ -97,7 +97,7 @@
 
 						<li class="p-t-4">
 							{if $option == "accessories"}
-								<a href="shop.php?catalogue=accessories" class="s-text13 active1">
+								<a id="active"href="shop.php?catalogue=accessories" class="s-text13 active1">
 									Accesories
 								</a>
 							{else}
