--- a/fashe-colorlib/html/shop-empty.html
+++ b/fashe-colorlib/html/shop-empty.html
@@ -23,47 +23,96 @@
                     </h4>
 
                     <ul class="p-b-54">
-                        <li class="p-t-4">
-                            <a href="shop.php" class="s-text13 active1">
-                                All
-                            </a>
-                        </li>
+						<li class="p-t-4">
+							{if $option == ""}
+								<a id="active" href="shop.php" class="s-text13 active1">
+									All
+								</a>
+							{else}
+								<a href="shop.php" class="s-text13">
+									All
+								</a>
+							{/if}
+						</li>
 
-                        <li class="p-t-4">
-                            <a href="shop.php?catalogue=swords" class="s-text13">Swords</a>
-                        </li>
+						<li class="p-t-4">
+							{if $option == "onsale"}
+								<a id="active" href="shop.php?onsale=onsale" class="s-text13 active1">
+									On Sale
+								</a>
+							{else}
+								<a href="shop.php?onsale=onsale" class="s-text13">
+									On Sale
+								</a>
+							{/if}
+						</li>
 
-                        <li class="p-t-4">
-                            <a href="shop.php?catalogue=shields" class="s-text13">
-                                Shields
-                            </a>
-                        </li>
+						<li class="p-t-4">
+							{if $option == "swords"}
+								<a id="active" href="shop.php?catalogue=swords" class="s-text13 active1">
+									Swords
+								</a>
+							{else}
+								<a href="shop.php?catalogue=swords" class="s-text13">
+									Swords
+								</a>
+							{/if}
+						</li>
 
-                        <li class="p-t-4">
-                            <a href="shop.php?catalogue=protective gears" class="s-text13">
-                                Protective gears
-                            </a>
-                        </li>
+						<li class="p-t-4">
+							{if $option == "shields"}
+								<a id="active" href="shop.php?catalogue=shields" class="s-text13 active1">
+									Shields
+								</a>
+							{else}
+								<a href="shop.php?catalogue=shields" class="s-text13">
+									Shields
+								</a>
+							{/if}
+						</li>
 
-                        <li class="p-t-4">
-                            <a href="shop.php?catalogue=manuscripts" class="s-text13">
-                                Manuscripts
-                            </a>
-                        </li>
+						<li class="p-t-4">
+							{if $option == "protective gears"}
+								<a id="active" href="shop.php?catalogue=protective gears" class="s-text13 active1">
+									Protective gears
+								</a>
+							{else}
+								<a href="shop.php?catalogue=protective gears" class="s-text13">
+									Protective gears
+								</a>
+							{/if}
+						</li>
 
-                        <li class="p-t-4">
-                            <a href="shop.php?catalogue=accessories" class="s-text13">
-                                Accesories
-                            </a>
-                        </li>
-                    </ul>
+						<li class="p-t-4">
+							{if $option == "manuscripts"}
+								<a id="active" href="shop.php?catalogue=manuscripts" class="s-text13 active1">
+									Manuscripts
+								</a>
+							{else}
+								<a href="shop.php?catalogue=manuscripts" class="s-text13">
+									Manuscripts
+								</a>
+							{/if}
+						</li>
+
+						<li class="p-t-4">
+							{if $option == "accessories"}
+								<a id="active" href="shop.php?catalogue=accessories" class="s-text13 active1">
+									Accesories
+								</a>
+							{else}
+								<a href="shop.php?catalogue=accessories" class="s-text13">
+									Accesories
+								</a>
+							{/if}
+						</li>
+					</ul>
                     <div class="search-product pos-relative bo4 of-hidden">
                         <input class="s-text7 size6 p-l-23 p-r-50" type="text" name="search-product" placeholder="Search Products...">
                         <button class="flex-c-m size5 ab-r-m color2 color0-hov trans-0-4">
                             <i class="fs-12 fa fa-search" aria-hidden="true"></i>
                         </button>
                     </div>
-                    </ul>
                 </div>
             </div>
             <!-- NEED AJAX OR JS FUNCTION -->
@@ -82,10 +131,10 @@
 						<div class="rs2-select2 bo4 of-hidden w-size12 m-t-5 m-b-5 m-r-10">
 								<select class="selection-2" name="price" id="price-range">
 									<option value = "">Any Price</option>
-									<option value = "0,50">€0.00 - €50.00</option>
-									<option value = "50,100">€50.00 - €100.00</option>
-									<option value = "100,200">€100.00 - €200.00</option>
-									<option value = "200,200000">€200.00+</option>
+									<option value = "0,50">€0 - €50</option>
+									<option value = "50,100">€50 - €100</option>
+									<option value = "100,200">€100 - €200</option>
+									<option value = "200,200000">€200+</option>
 								</select>
 						</div>
                         <div class="rs2-select2 of-hidden w-size12 m-t-5 m-b-5 m-r-10">
@@ -198,13 +247,50 @@
 </script>
 <!--===============================================================================================-->
 <script src="js/main.js"></script>
+<!-- String Sanitize Function -->
+<script type="text/javascript">
+    function sanitizeString(str){
+        str = str.replace(/[^a-z0-9áéíóúñü \.,_-]/gim,"");
+        return str.trim();
+    }
+</script>
 <!--===============================================================================================-->
 <!-- sorting update request -->
 <script type="text/javascript">
-    function request(sort,min,max){
+    function requestOnSale(sort,min,max){
         //create and submit form with new element
         var form = $('<form></form>');
-        form.attr("method", "post");
+        form.attr("method", "get");
+        form.attr("action", "shop.php");
+        var field1 = $('<input></input>');
+        field1.attr("type", "hidden");
+        field1.attr("name", "price_min");
+        field1.attr("value", min);
+        form.append(field1);
+        var field2 = $('<input></input>');
+        field2.attr("type", "hidden");
+        field2.attr("name", "price_max");
+        field2.attr("value", max);
+        form.append(field2);
+        var field3 = $('<input></input>');
+        field3.attr("type", "hidden");
+        field3.attr("name", "sorting");
+        field3.attr("value", sort);
+        form.append(field3);
+        var field4 = $('<input></input>');
+        field4.attr("type", "hidden");
+        field4.attr("name", "onsale");
+        field4.attr("value", "onsale");
+        form.append(field4);
+        $(document.body).append(form);
+        form.submit();
+    };
+</script>
+<script type="text/javascript">
+    function requestAll(sort,min,max){
+        //create and submit form with new element
+        var form = $('<form></form>');
+        form.attr("method", "get");
         form.attr("action", "shop.php");
         var field1 = $('<input></input>');
         field1.attr("type", "hidden");
@@ -225,20 +311,59 @@
         form.submit();
     };
 </script>
+<!-- sorting update request -->
+<script type="text/javascript">
+    function request(sort,min,max,category){
+        //create and submit form with new element
+        var form = $('<form></form>');
+        form.attr("method", "get");
+        form.attr("action", "shop.php");
+        var field1 = $('<input></input>');
+        field1.attr("type", "hidden");
+        field1.attr("name", "price_min");
+        field1.attr("value", min);
+        form.append(field1);
+        var field2 = $('<input></input>');
+        field2.attr("type", "hidden");
+        field2.attr("name", "price_max");
+        field2.attr("value", max);
+        form.append(field2);
+        var field3 = $('<input></input>');
+        field3.attr("type", "hidden");
+        field3.attr("name", "sorting");
+        field3.attr("value", sort);
+        form.append(field3);
+        var field4 = $('<input></input>');
+        field4.attr("type", "hidden");
+        field4.attr("name", "catalogue");
+        field4.attr("value", category);
+        form.append(field4);
+        $(document.body).append(form);
+        form.submit();
+    };
+</script>
 <!-- Sorting update procedure -->
 <script type="text/javascript">
     function change(){
+        //get requested sorting and price range values
         var sorting = $("select#sorting").contents("option:selected").val();
         var pricerange = $("select#price-range").contents("option:selected").val();
-        if (pricerange != null){
-            var min = pricerange.slice(0 , pricerange.indexOf(","));
-            var max = pricerange.slice(pricerange.indexOf(",")+1);
-            request(sorting,min,max);
+        var min = pricerange.slice(0 , pricerange.indexOf(","));
+        var max = pricerange.slice(pricerange.indexOf(",")+1);
+        //get current product category
+        var category = sanitizeString($("#active").contents().text()).toLowerCase();
+        if (category == "all"){
+            requestAll(sorting,min,max);
         } else {
-            request(sorting);
-        }
+            if (category == "on sale"){
+                requestOnSale(sorting,min,max);
+            } else {
+                request(sorting,min,max,category);
+            }
+        }   
     }
 </script>
+
 
 </body>
 </html>
