--- a/fashe-colorlib/html/product-detail.html
+++ b/fashe-colorlib/html/product-detail.html
@@ -108,6 +108,10 @@
 								</button>
 							</div>
 
+							<div class="flex-w of-hidden m-r-22 m-t-10 m-b-10 {$stock}">
+								{$availability}
+							</div>
+
 							<div class="btn-addcart-product-detail size9 trans-0-4 m-t-10 m-b-10">
 								<!-- Button --> 
 								<!-- AJAX here --> 
