--- a/fashe-colorlib/html/order-detail.html
+++ b/fashe-colorlib/html/order-detail.html
@@ -1,9 +1,9 @@
 {include file="header.html" title="Header"}
 
 <!-- Title Page -->
-	<section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background-image: url(images/heading-pages-01.jpg);">
+	<section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background-image: url(images/heading-pages-02.jpg);">
 		<h2 class="l-text2 t-center">
-			Cart
+			Orders
 		</h2>
 	</section>
 
