--- a/fashe-colorlib/html/shop-empty.html
+++ b/fashe-colorlib/html/shop-empty.html
@@ -1,13 +1,10 @@
 {include file="header.html" title="Header"}
 
 <!-- Title Page -->
-<section class="bg-title-page p-t-50 p-b-40 flex-col-c-m" style="background-image: url(images/heading-pages-02.jpg);">
-    <h2 class="l-text2 t-center">
-        Women
-    </h2>
-    <p class="m-text13 t-center">
-        New Arrivals Women Collection 2018
-    </p>
+<section class="bg-title-page p-t-50 p-b-40 flex-col-c-m" style="background-image: url(images/cropped-fencer-2.jpg);">
+	<h2 class="l-text2 t-center">
+		Shop
+	</h2>
 </section>
 
 
