--- a/fashe-colorlib/html/shop.html
+++ b/fashe-colorlib/html/shop.html
@@ -1,13 +1,10 @@
 {include file="header.html" title="Header"}
 
 <!-- Title Page -->
-<section class="bg-title-page p-t-50 p-b-40 flex-col-c-m" style="background-image: url(images/heading-pages-02.jpg);">
+<section class="bg-title-page p-t-50 p-b-40 flex-col-c-m" style="background-image: url(images/cropped-fencer-2.jpg);">
 	<h2 class="l-text2 t-center">
-		Women
+		Shop
 	</h2>
-	<p class="m-text13 t-center">
-		New Arrivals Women Collection 2018
-	</p>
 </section>
 
 
