--- a/fashe-colorlib/html/checkout.html
+++ b/fashe-colorlib/html/checkout.html
@@ -3,7 +3,7 @@
 <!-- Title Page -->
 	<section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background-image: url(images/heading-pages-02.jpg);">
 		<h2 class="l-text2 t-center">
-			Cart
+			Check Out
 		</h2>
 	</section>
 
