--- a/fashe-colorlib/html/about.html
+++ b/fashe-colorlib/html/about.html
@@ -12,11 +12,7 @@
 	<section class="bgwhite p-t-66 p-b-38">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4 p-b-30">
-					<div class="hov-img-zoom">
-						<img src="images/banner-14.jpg" alt="IMG-ABOUT">
-					</div>
-				</div>
+
 
 				<div class="col-md-8 p-b-30">
 					<h3 class="m-text26 p-t-15 p-b-16">
@@ -24,7 +20,7 @@
 					</h3>
 
 					<p class="p-b-28">
-						Phasellus egestas nisi nisi, lobortis ultricies risus semper nec. Vestibulum pharetra ac ante ut pellentesque. Curabitur fringilla dolor quis lorem accumsan, vitae molestie urna dapibus. Pellentesque porta est ac neque bibendum viverra. Vivamus lobortis magna ut interdum laoreet. Donec gravida lorem elit, quis condimentum ex semper sit amet. Fusce eget ligula magna. Aliquam aliquam imperdiet sodales. Ut fringilla turpis in vehicula vehicula. Pellentesque congue ac orci ut gravida. Aliquam erat volutpat. Donec iaculis lectus a arcu facilisis, eu sodales lectus sagittis. Etiam pellentesque, magna vel dictum rutrum, neque justo eleifend elit, vel tincidunt erat arcu ut sem. Sed rutrum, turpis ut commodo efficitur, quam velit convallis ipsum, et maximus enim ligula ac ligula. Vivamus tristique vulputate ultricies. Sed vitae ultrices orci.
+                        The SAAM Shop is one of Europe’s largest HEMA retailers. We are the global distributor for Red Dragon Armoury and the European distributors for major international manufacturers such as Deepeeka, Windlass, Art Gladius, Medio Evo and Marshal Historical. We also major stockists of other large brands such as Hanwei, GDFB and SPES. We carry a diverse range of products that cater to Historical European Martial Artists (HEMA), Re-enactors, theatre groups and collectors. We are also a major supplier to the heritage industry. Our trade department supplies large organisations such as English Heritage, Historic Scotland, Historic Royal Palaces, Royal Armouries, British Museum, The National Trust for Scotland and Warwick Castle.
 					</p>
 
 					<div class="bo13 p-l-29 m-l-9 p-b-10">
