--- a/fashe-colorlib/html/contact.html
+++ b/fashe-colorlib/html/contact.html
@@ -13,7 +13,7 @@
 			<div class="row">
 				<div class="col-md-6 p-b-30">
 					<div class="p-r-20 p-r-0-lg">
-						<div class="contact-map size21" id="google_map" data-map-x="40.614439" data-map-y="-73.926781" data-pin="images/icons/icon-position-map.png" data-scrollwhell="0" data-draggable="1"></div>
+						<div class="contact-map size21" id="google_map" data-map-x="42.364552" data-map-y="13.363544" data-pin="images/icons/pin-google.png" data-scrollwhell="0" data-draggable="1"></div>
 					</div>
 				</div>
 
